--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -16,15 +16,17 @@
             android:id="@+id/listViewObjetos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/audiowide"
             android:layout_weight="1" />
 
         <Button
             android:id="@+id/buttonAdicionar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Adicionar Objeto"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/audiowide"
+            android:text="Adicionar Objeto" />
     </LinearLayout>
 
 
