--- a/app/src/main/res/layout/activity_objeto_details.xml
+++ b/app/src/main/res/layout/activity_objeto_details.xml
@@ -7,16 +7,34 @@
     android:layout_height="match_parent"
     tools:context=".ObjetoDetailsActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/audiowide"
+        android:text="Criar / Alterar / Excluir Objetos"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <EditText
             android:id="@+id/editTextNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/audiowide"
             android:hint="Nome do Objeto"
             android:inputType="text"
             android:minHeight="48dp" />
@@ -25,6 +43,7 @@
             android:id="@+id/editTextQuantidade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/audiowide"
             android:hint="Quantidade"
             android:inputType="number"
             android:minHeight="48dp" />
@@ -33,6 +52,7 @@
             android:id="@+id/editTextPreco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/audiowide"
             android:hint="Preço"
             android:inputType="numberDecimal"
             android:minHeight="48dp" />
@@ -41,6 +61,7 @@
             android:id="@+id/checkBoxDisponivel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/audiowide"
             android:text="Disponível" />
 
         <LinearLayout
@@ -53,14 +74,16 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Salvar" />
+                android:fontFamily="@font/audiowide"
+                android:text="Salvar e Voltar" />
 
             <Button
                 android:id="@+id/buttonExcluir"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Excluir ou Voltar" />
+                android:fontFamily="@font/audiowide"
+                android:text="Excluir e Voltar" />
         </LinearLayout>
     </LinearLayout>
 
