--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,25 @@
             android:id="@+id/listViewObjetos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/audiowide" />
+
+        <!-- Antes do LinearLayout em activity_main.xml -->
+
+        <TextView
+            android:id="@+id/textViewSomaPrecos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:fontFamily="@font/audiowide"
-            android:layout_weight="1" />
+            android:text="Soma dos Preços: 0.0"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <Button
             android:id="@+id/buttonAdicionar"
